fix wrong import for logger